# ecommerce

./: .gitignore  main.py  pyproject.toml
api/: users.py
